// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli ebs, s3, ec3, elasticache, rds ebs, s3, ec2, elasticache, rds grouped by service 1`] = `
"| Service      | kilowatt hours    | metric tons CO2e Emissions| Cost              
| Total        | 0.00              | 0.000000               | $0.00             "
`;

exports[`cli ebs, s3, ec3, elasticache, rds ebs, s3, ec2, elasticache, rds, grouped by day 1`] = `
"| Date         | kilowatt hours    | metric tons CO2e Emissions
| Total        | 0.00              | 0.000000               "
`;

exports[`cli ebs, s3, ec3, elasticache, rds ebs, s3, ec2, elasticache, rds, grouped by day and service 1`] = `
"| Date (UTC)   | SUM kilowatt hours| SUM metric tons CO2e Emissions
| Total        | 0.00              | 0.000000               "
`;

exports[`cli lambda lambda cost 1`] = `
"| Service      | kilowatt hours    | metric tons CO2e Emissions| Cost              
| Total        | 0.00              | 0.000000               | $0.00             "
`;

exports[`cli lambda lambda estimates 1`] = `
"| Date (UTC)   | SUM kilowatt hours| SUM metric tons CO2e Emissions
| Total        | 0.00              | 0.000000               "
`;
